# 2025-ikt218-osdev

./: .gitignore
.devcontainer/: devcontainer.json
src/OSDev84/: CMakeLists.txt
src/OSDev84/include/: stdbool.h  stddef.h  stdint.h
src/OSDev84/src/: kernel.c  multiboot2.asm  terminal.c  terminal.h
src/OSDev84/src/arch/i386/: .gdt.asm  .gdt.h  gdt.c
